Create UpdateArticle API (#16)
